<resources>
    <string name="app_name">Personal Budgeting App</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="username_text">User name</string>
    <string name="password_text">Password</string>
    <string name="loginPage_redirect">Don\'t have an account? Sign up.</string>
    <string name="registerPage_redirect">Already have an account? Login.</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="tdBudget">Budget</string>
    <string name="tdToday">Today</string>
    <string name="tdWeek">Week</string>
    <string name="tdBudgetMonth">Month</string>
    <string name="tvMyBudget">My Budget</string>
    <string name="tvMonth">This month</string>
    <string name="tvWeek">This week</string>
    <string name="tvToday">Today</string>
    <string name="tvAnalytic">Analytics</string>
    <string name="tvHistory">History</string>
    <string name="tdSavings">Savings</string>
    <string name="item_account">My Account</string>
    <string name="item_infor">About App</string>
    <string-array name="items">
        <item>Select item</item>
        <item>Transport</item>
        <item>Food</item>
        <item>House</item>
        <item>Entertainment</item>
        <item>Apparel</item>
        <item>Personal</item>
        <item>Other</item>
    </string-array>
</resources>