<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimage"
    tools:context=".MainPageActivity">

    <TableLayout
        android:id="@+id/tblInforamtion"
        android:layout_width="380dp"
        android:layout_height="74dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/trTitle"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:id="@+id/tvBudget"
                android:layout_width="76dp"
                android:layout_height="37dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/tdBudget"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvToday"
                android:layout_width="76dp"
                android:layout_height="37dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/tdToday"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvWeek"
                android:layout_width="76dp"
                android:layout_height="37dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/tdWeek"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMonth"
                android:layout_width="76dp"
                android:layout_height="37dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/tdBudgetMonth"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSavings"
                android:layout_width="76dp"
                android:layout_height="37dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/tdSavings"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/trValue"
            android:layout_width="match_parent"
            android:layout_height="31dp">

            <TextView
                android:id="@+id/tvBudgetValue"
                android:layout_width="76dp"
                android:layout_height="37dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvTodayValue"
                android:layout_width="76dp"
                android:layout_height="37dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvWeekValue"
                android:layout_width="76dp"
                android:layout_height="37dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvMonthValue"
                android:layout_width="76dp"
                android:layout_height="37dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvSavingsValue"
                android:layout_width="76dp"
                android:layout_height="37dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:textColor="@color/white" />

        </TableRow>
    </TableLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="358dp"
        android:layout_height="471dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="21dp"
        app:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tblInforamtion"
        app:rowCount="3"
        app:useDefaultMargins="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/budgetCardView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/budgetBtnImageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/budget"
                    tools:srcCompat="@drawable/budget" />

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tvMyBudget"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView
>

        <androidx.cardview.widget.CardView
            android:id="@+id/todayCardView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/todayBtnImageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/today"
                    tools:srcCompat="@drawable/today" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tvToday"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/weekCardView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/weekBtnImageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/week"
                    tools:srcCompat="@drawable/week" />

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tvWeek"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/monthBtnImageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/month"
                    tools:srcCompat="@drawable/month" />

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tvMonth"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/analyticsCardView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/analyticsBtnImageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_anaytic"
                    tools:srcCompat="@drawable/ic_anaytic" />

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tvAnalytic"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/historyCardView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/im6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/history"
                    tools:srcCompat="@drawable/history" />

                <TextView
                    android:id="@+id/tv6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tvHistory"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>